--- a/new-gen-report.html
+++ b/new-gen-report.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -9,7 +10,10 @@
 .header { background-color: #eee;cursor:pointer; }
 </style>
 <script>
-function toggleTestCase(id){ $("#"+id+"-toggle").collapse("toggle"); }
+function toggleTestCase(index){
+$("#test-case-"+index+"-toggle").collapse("toggle");
+$("#test-case-"+index).find("i").toggleClass("fa-angle-double-up fa-angle-double-down");
+}
 </script>
 </head>
 <body>
@@ -24,15 +28,18 @@ function toggleTestCase(id){ $("#"+id+"-toggle").collapse("toggle"); }
 </div><div class="list-group mb-2">
 <div id="test-case-1" class="list-group-item header" data-bs-toggle="collapse"
 data-bs-target="#test-case-1-toggle"
-onClick="javascript:toggleTestCase('test-id-1')">
+onClick="javascript:toggleTestCase(1)">
 <div><b>TEST CASE #1: Test the response is providing Countries List or not</b>
-<span class="float-end badge bg-success"><b>PASSED</b></span>
+<span class="float-end">
+<span class="badge bg-success"><b>PASSED</b></span>
+<i class="fa fa-angle-double-down" aria-hidden="true" style="font-size:19px;"></i>
+</span>
 </div>
 </div>
 <div id="test-case-1-toggle" class="list-group-item collapse">
 <div class="row">
 <div class="col-md-12"><b>Description:</b> We are hitting API and testing  the response is providing the countries list or not</div>
-<div class="col-md-12"><b>URL:</b> get/countries/list <span class="badge bg-success">GET</span> </div>
+<div class="col-md-12"><b>URL:</b> http://localhost/aiwl-app2/get/countries/list <span class="badge bg-success">GET</span> </div>
 </div>
 <div class="row">
 <div class="col-md-4">
