--- a/new-gen-report.html
+++ b/new-gen-report.html
@@ -86,6 +86,248 @@ onClick="javascript:toggleTestCase(1)">
 </div>
 </div><!--/.row -->
 </div><!--/.list-group-item -->
+</div><!--/.list-group --><div class="mt-4">
+<h4>
+<b>2. Get List of States per Country <span class="badge bg-primary">get/{country}/data</span></b>
+<span class="float-end badge bg-success">GET</span>
+<hr/>
+</h4>
+</div><div class="list-group mb-2">
+<div id="test-case-2" class="list-group-item header" data-bs-toggle="collapse"
+data-bs-target="#test-case-2-toggle"
+onClick="javascript:toggleTestCase(2)">
+<div><b>TEST CASE #2: Test States List for Country from URL: get/USA/data</b>
+<span class="float-end">
+<span class="badge bg-success"><b>PASSED</b></span>
+<i class="fa fa-angle-double-down" aria-hidden="true" style="font-size:19px;"></i>
+</span>
+</div>
+</div>
+<div id="test-case-2-toggle" class="list-group-item collapse">
+<div class="row">
+<div class="col-md-12 mt-2"><b>Description:</b> Testing whether the API returns a valid list of states for the given country.</div>
+<div class="col-md-12 mt-2"><b>URL:</b> <code class="code"><b>http://localhost/aiwl-app2/get/USA/data</b></code></div>
+<div class="col-md-12 mt-2"><b>Method:</b> <span class="badge bg-success">GET</span> </div>
+</div>
+<div class="row">
+<div class="col-md-4 mt-2">
+<div><b>Request Body:</b></div>
+<div class="card code">
+<div class="card-body">
+-
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>API Response:</b></div>
+<div class="card code">
+<div class="card-body">
+{"tel_index":"+1","states":["Alabama","Alaska","Arizona","Arkansas","California","Colorado","Connecticut","Delaware","Florida","Georgia","Hawaii","Idaho","Illinois","Indiana","Iowa","Kansas","Kentucky","Louisiana","Maine","Maryland","Massachusetts","Michigan","Minnesota","Mississippi","Missouri","Montana","Nebraska","Nevada","New Hampshire","New Jersey","New Mexico","New York","North Carolina","North Dakota","Ohio","Oklahoma","Oregon","Pennsylvania","Rhode Island","South Carolina","South Dakota","Tennessee","Texas","Utah","Vermont","Virginia","Washington","West Virginia","Wisconsin","Wyoming"],"visa_types":["F-1 Student","F-1 OPT (Optional Practical Training)","F-1 STEM OPT Extension","H-1B Work Visa","Green Card \/ Permanent Resident"]}
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>Expected Response:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+</div><!--/.row -->
+<div class="row">
+<div class="col-md-6 mt-2">
+<div><b>Step Logs:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+<div class="col-md-6 mt-2">
+<div><b>Comments:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+</div><!--/.row -->
+</div><!--/.list-group-item -->
+</div><!--/.list-group --><div class="list-group mb-2">
+<div id="test-case-3" class="list-group-item header" data-bs-toggle="collapse"
+data-bs-target="#test-case-3-toggle"
+onClick="javascript:toggleTestCase(3)">
+<div><b>TEST CASE #3: Test States List for Country from URL: get/Canada/data</b>
+<span class="float-end">
+<span class="badge bg-success"><b>PASSED</b></span>
+<i class="fa fa-angle-double-down" aria-hidden="true" style="font-size:19px;"></i>
+</span>
+</div>
+</div>
+<div id="test-case-3-toggle" class="list-group-item collapse">
+<div class="row">
+<div class="col-md-12 mt-2"><b>Description:</b> Testing whether the API returns a valid list of states for the given country.</div>
+<div class="col-md-12 mt-2"><b>URL:</b> <code class="code"><b>http://localhost/aiwl-app2/get/Canada/data</b></code></div>
+<div class="col-md-12 mt-2"><b>Method:</b> <span class="badge bg-success">GET</span> </div>
+</div>
+<div class="row">
+<div class="col-md-4 mt-2">
+<div><b>Request Body:</b></div>
+<div class="card code">
+<div class="card-body">
+-
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>API Response:</b></div>
+<div class="card code">
+<div class="card-body">
+{"tel_index":"+1","states":["Alberta","British Columbia","Manitoba","New Brunswick","Newfoundland and Labrador","Nova Scotia","Ontario","Prince Edward Island","Quebec","Saskatchewan"],"visa_types":["Study Permit","Post-Graduation Work Permit (PGWP)","Express Entry \/ PR"]}
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>Expected Response:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+</div><!--/.row -->
+<div class="row">
+<div class="col-md-6 mt-2">
+<div><b>Step Logs:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+<div class="col-md-6 mt-2">
+<div><b>Comments:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+</div><!--/.row -->
+</div><!--/.list-group-item -->
+</div><!--/.list-group --><div class="list-group mb-2">
+<div id="test-case-4" class="list-group-item header" data-bs-toggle="collapse"
+data-bs-target="#test-case-4-toggle"
+onClick="javascript:toggleTestCase(4)">
+<div><b>TEST CASE #4: Test States List for Country from URL: get/UK/data</b>
+<span class="float-end">
+<span class="badge bg-success"><b>PASSED</b></span>
+<i class="fa fa-angle-double-down" aria-hidden="true" style="font-size:19px;"></i>
+</span>
+</div>
+</div>
+<div id="test-case-4-toggle" class="list-group-item collapse">
+<div class="row">
+<div class="col-md-12 mt-2"><b>Description:</b> Testing whether the API returns a valid list of states for the given country.</div>
+<div class="col-md-12 mt-2"><b>URL:</b> <code class="code"><b>http://localhost/aiwl-app2/get/UK/data</b></code></div>
+<div class="col-md-12 mt-2"><b>Method:</b> <span class="badge bg-success">GET</span> </div>
+</div>
+<div class="row">
+<div class="col-md-4 mt-2">
+<div><b>Request Body:</b></div>
+<div class="card code">
+<div class="card-body">
+-
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>API Response:</b></div>
+<div class="card code">
+<div class="card-body">
+{"tel_index":"+44","states":["England","Scotland","Wales","Northern Ireland"],"visa_types":["Tier 4 Student","Graduate Route","Graduate Route (Post-Study Work)","Skilled Worker Visa"]}
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>Expected Response:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+</div><!--/.row -->
+<div class="row">
+<div class="col-md-6 mt-2">
+<div><b>Step Logs:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+<div class="col-md-6 mt-2">
+<div><b>Comments:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+</div><!--/.row -->
+</div><!--/.list-group-item -->
+</div><!--/.list-group --><div class="list-group mb-2">
+<div id="test-case-5" class="list-group-item header" data-bs-toggle="collapse"
+data-bs-target="#test-case-5-toggle"
+onClick="javascript:toggleTestCase(5)">
+<div><b>TEST CASE #5: Test States List for Country from URL: get/Australia/data</b>
+<span class="float-end">
+<span class="badge bg-success"><b>PASSED</b></span>
+<i class="fa fa-angle-double-down" aria-hidden="true" style="font-size:19px;"></i>
+</span>
+</div>
+</div>
+<div id="test-case-5-toggle" class="list-group-item collapse">
+<div class="row">
+<div class="col-md-12 mt-2"><b>Description:</b> Testing whether the API returns a valid list of states for the given country.</div>
+<div class="col-md-12 mt-2"><b>URL:</b> <code class="code"><b>http://localhost/aiwl-app2/get/Australia/data</b></code></div>
+<div class="col-md-12 mt-2"><b>Method:</b> <span class="badge bg-success">GET</span> </div>
+</div>
+<div class="row">
+<div class="col-md-4 mt-2">
+<div><b>Request Body:</b></div>
+<div class="card code">
+<div class="card-body">
+-
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>API Response:</b></div>
+<div class="card code">
+<div class="card-body">
+{"tel_index":"+61","states":["New South Wales (NSW)","Victoria (VIC)","Queensland (QLD)","South Australia (SA)","Western Australia (WA)","Tasmania (TAS)","Australian Capital Territory (ACT)","Northern Territory (NT)"],"visa_types":["Student (Subclass 500)","Temporary Graduate (Subclass 485)","Skilled Independent (Subclass 189)"]}
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+<div class="col-md-4 mt-2">
+<div><b>Expected Response:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div><!--/.col-md-4 -->
+</div><!--/.row -->
+<div class="row">
+<div class="col-md-6 mt-2">
+<div><b>Step Logs:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+<div class="col-md-6 mt-2">
+<div><b>Comments:</b></div>
+<div class="card code">
+<div class="card-body">
+</div><!--/.card-body -->
+</div><!--/.card -->
+</div>
+</div><!--/.row -->
+</div><!--/.list-group-item -->
 </div><!--/.list-group -->
 </div>
 </body>
